--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   orders:
     build: 
@@ -13,7 +15,7 @@ services:
       - mongodb-arbiter
     volumes:
       - .:/usr/src/app
-      - /user/src/app/node_modules
+      - /usr/src/app/node_modules
     ports:
       - '3000:3000'
 
@@ -39,6 +41,10 @@ services:
       - MONGODB_INITIAL_PRIMARY_HOST=mongodb-primary
       - MONGODB_INITIAL_PRIMARY_ROOT_PASSWORD=password123
       - MONGODB_REPLICA_SET_KEY=replicasetkey123
+    volumes:
+      - 'mongodb_secondary_data:/bitnami/mongodb'
+    ports:
+      - "27018:27017"
 
   mongodb-arbiter:
     image: docker.io/bitnami/mongodb:7.0
@@ -50,7 +56,15 @@ services:
       - MONGODB_INITIAL_PRIMARY_HOST=mongodb-primary
       - MONGODB_INITIAL_PRIMARY_ROOT_PASSWORD=password123
       - MONGODB_REPLICA_SET_KEY=replicasetkey123
+    volumes:
+      - 'mongodb_arbiter_data:/bitnami/mongodb'
+    ports:
+      - "27019:27017"
 
 volumes:
   mongodb_master_data:
+    driver: local
+  mongodb_secondary_data:
+    driver: local
+  mongodb_arbiter_data:
     driver: local
